Add Stats, ZoneReward, and Zone subcommand handlers
- Implemented StatsSubcommands to handle player statistics and leaderboard commands.
- Created ZoneRewardSubcommands for managing rewards associated with zones.
- Developed ZoneSubcommands for zone management, including creation, listing, and wand selection.
- Refactored command handling to improve organization and maintainability.